[gd_scene load_steps=4 format=2]

[ext_resource path="res://lag compesation/lag compensation.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends KinematicBody2D

var motion = Vector2(0,0)
var goal
var speed = 500.0
var positions = [Vector2(0,0),Vector2(0,0)]
var ints = 0

func _physics_process(delta):
	if Input.is_action_pressed(\"ui_mouse\"):
		goal = get_global_mouse_position()
		motion = (goal - get_global_position()).normalized() * speed
		move_and_slide(motion)

"

[node name="Node2D" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( -319.551, 129.045 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="KinematicBody2D"]
wait_time = 0.01
autostart = true

[node name="Timer2" type="Timer" parent="KinematicBody2D"]
wait_time = 0.6
autostart = true

[node name="AnimatedSprite" type="KinematicBody2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -38.1737, -83.4487 )
script = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="AnimatedSprite"]
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
[connection signal="timeout" from="KinematicBody2D/Timer" to="KinematicBody2D" method="_on_Timer_timeout"]
[connection signal="timeout" from="KinematicBody2D/Timer2" to="KinematicBody2D" method="_on_Timer2_timeout"]
